update rmove auth JWT for getall post
