# backend/routes/postsRouter.js
@@ -5,9 +5,19 @@ const postValidation = require('../middleware/postValidation');
 
 const postsRouter = Router();
 
-postsRouter.post('/', authJWT, postValidation.dataValidation, postController.addPost);
-postsRouter.get('/', authJWT, postController.getAllPost);
+postsRouter.post(
+  '/',
+  authJWT,
+  postValidation.dataValidation,
+  postController.addPost,
+);
+postsRouter.get('/', postController.getAllPost);
 postsRouter.delete('/:id', authJWT, postController.deletePost);
-postsRouter.put('/:id', authJWT, postValidation.dataValidation, postController.editPost);
+postsRouter.put(
+  '/:id',
+  authJWT,
+  postValidation.dataValidation,
+  postController.editPost,
+);
 
 module.exports = { postsRouter };
